Import makecell package for table edits

--- a/Article.tex
+++ b/Article.tex
@@ -4,6 +4,7 @@
 \DeclareFloatingEnvironment[name={Supplementary Figure}]{suppfigure}
 \DeclareFloatingEnvironment[name={Supplementary Table}]{supptable}
 \usepackage{multirow}
+\usepackage{makecell}
 \usepackage{upgreek}
 
 \newcommand{\dreca}{$\Delta$\textit{recA}} % ΔrecA
