Improve Gam-mutant transition

--- a/Results.tex
+++ b/Results.tex
@@ -61,10 +61,10 @@ Using the timelapse data, we built histograms of RecB spot lifetimes at the diff
 % Gam
 To determine whether short- or long-lived spots resulted from RecB binding to DNA leading to SOS induction, we measured RecB spot lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DSBs. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/ml) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}), indicating that most cells did not induce the SOS response, due to the inability of the RecBCD-Gam complex to bind to DSBs and load RecA. The resulting RecB spot lifetimes showed a similar distribution to the one obtained in the absence of ciprofloxacin (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found a proportion of long-lived spots in the presence of 30 ng/ml ciprofloxacin (1.8\% $\pm$ 0.9, Table \ref{tab:fit_results}) equivalent to wild-type cells that were not exposed to ciprofloxacin (1.8\% $\pm$ 1). The residual amount of long-lived RecB spots in the presence of Gam could be due to residual DNA binding despite the presence of Gam. This residual binding could also be the cause for the small increase in cell length observed in Gam-expressing cells under 30 ng/ml ciprofloxacin (Supp. Figure \ref{SIFig:Gam_cell_length}). Since Gam overexpression prevents RecB binding to DNA ends, and specifically caused long-lived spots to disappear, we can conclude that long-lived spots correspond to RecB molecules that have bound to a DSB. Given that under Gam overexpression, 95\% of RecB spots were shorter than 10 sec (Figure \ref{Fig:lifetimes}C), we considered any spot with a lifetime over 10 sec to be a DNA-bound RecB molecule. The appearance of short-lived spots in the presence of Gam is likely due to a combination of short-lived DNA binding and slow, confined diffusion of the RecBCD-Gam-Halo complex (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Therefore, spots that are visible for less than 10 seconds cannot be reliably assigned as either DNA-bound or not. However, the largely reduced cell elongation in the presence of Gam (Supp. Figure \ref{SIFig:Gam_cell_length}) indicates that short-lived spots do not trigger the SOS response.
 
-Using the Gam protein allowed us to identify DNA-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration. In addition, to test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits at 15 min intervals (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
+Using the Gam protein allowed us to identify DNA-bound RecB molecules as the longer-lived population in our bi-exponential fits of the RecB spot lifetime histograms. We determined that when it processes a DSB, RecB stays bound to DNA for 10 to 15 seconds on average, regardless of the ciprofloxacin concentration (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the presence of other DSBs in the cell. In addition, to test whether the duration of ciprofloxacin exposure had an effect on spot lifetimes, we performed separate fits at 15 min intervals (Supp. Figure \ref{SIFig:RecB_lifetimes_timepoints}). The RecB spot lifetimes obtained were consistent with those reported in Table \ref{tab:fit_results} (10-15 sec for long-lived spots, and 1.5-2 sec for short-lived spots), indicating that RecB binding was not affected by the duration of ciprofloxacin exposure.
 
 % Effect of ciprofloxacin exposure on the different mutants
-Imaging RecB binding to DSBs in the presence of different concentrations of ciprofloxacin allowed us to determine that the amount of DNA damage experienced by the cells did not influence the time spent by RecB on DNA (Table \ref{tab:fit_results}). This is consistent with processing of DSBs by RecBCD taking place independently of the presence of other DSBs in the cell. Next, we wanted to test whether RecB dissociation from DNA was influenced by the following step in the repair process, the loading of RecA on DNA. Therefore, we imaged the \dreca\ and \geneteneighty\ mutants in the presence and absence of 30 ng/ml ciprofloxacin. Figure \ref{Fig:lifetimes}D shows defocussed brightfield images of wild-type and mutant cells that were not exposed to ciprofloxacin, or exposed to 30 ng/ml ciprofloxacin for 60 min. Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths for the different strains and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \geneteneighty\ mutant cells were slightly more elongated than wild-type cells. This matches previous indications that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage\cite{Lepore2023}. Upon exposure to ciprofloxacin, the cell length of the \geneteneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to directly load RecA on the DNA, and the use of the alternative RecFOR pathway leading to different time dynamics of the SOS response\cite{Ivancic-Bace_2003,Lepore2023}.
+Next, we wanted to test whether RecB dissociation from DNA was influenced by the following step in the repair process, the loading of RecA on DNA. Therefore, we imaged the \dreca\ and \geneteneighty\ mutants in the presence and absence of 30 ng/ml ciprofloxacin. Figure \ref{Fig:lifetimes}D shows defocussed brightfield images of wild-type and mutant cells that were not exposed to ciprofloxacin, or exposed to 30 ng/ml ciprofloxacin for 60 min. Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths for the different strains and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \geneteneighty\ mutant cells were slightly more elongated than wild-type cells. This matches previous indications that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage\cite{Lepore2023}. Upon exposure to ciprofloxacin, the cell length of the \geneteneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to directly load RecA on the DNA, and the use of the alternative RecFOR pathway leading to different time dynamics of the SOS response\cite{Ivancic-Bace_2003,Lepore2023}.
 
 % RecB binding time in the mutants
 As for the wild-type strain, we imaged RecB, computed histograms of RecB spot lifetimes and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DNA (Table \ref{tab:fit_mutants}). In the \dreca\ mutant, the DNA-binding lifetime of RecB was similar to the wild-type ($\sim$12 sec), both in the presence and absence of ciprofloxacin. This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of wild-type RecBCD from DNA. In contrast, \teneighty\ stayed bound to DNA for longer on average than wild-type RecB ($\sim$16 to 19 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
