Re-arranged figures 1 and 2

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -153,7 +153,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \includegraphics[width=0.75\linewidth]{SI_Figures/Gam_lifetimes_vs_WT.pdf}
     \end{center}
     \caption{\textbf{(A)} Histograms of RecB spot lifetimes for wild-type cells (coloured bars) and cells overexpressing Gam (dashes). \ncells{41,403}. \nspots{96,453} \textbf{(B)} Zoom on the tail of the histograms from (A).}
-    \label{SIFig:Gam_RecB_lifetimes_fits}
+    \label{SIFig:Gam_RecB_lifetimes_vs_WT}
 \end{suppfigure*}
 
 % Displacements simulation
@@ -172,6 +172,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \end{center}
     \caption{Fitted lifetimes of short- and long-lived RecB spots, following different durations of exposure to ciprofloxacin. Coloured bars represent the fitted lifetimes, and black strokes the standard error of the mean obtained by bootstrapping. \ncells{66,764}. \nspots{170,138}}
     \label{SIFig:RecB_lifetimes_timepoints}
+    \end{suppfigure*}
+
+% BF images of mutants at 0 and 30 ng/ml ciprofloxacin
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\linewidth]{SI_Figures/Mutant_BF.pdf}
+    \end{center}
+    \caption{Representative defocussed brightfield images of wild-type (WT), \dreca\ and \geneteneighty\ mutants cells, in the absence and presence of ciprofloxacin (30 ng/ml).}
+    \label{SIFig:mutants_bf}
     \end{suppfigure*}
 
 % Mutants: cell lengths upon exposure to ciprofloxacin
