Fixed broken Fig ref

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -17,7 +17,7 @@ All experimental photobleaching curves were well-fitted by a mono-exponential de
 
 \section{Formation of RecB spots by the freely diffusing RecBCD-Halo-Gam complex}
 \label{note:spurious_spots}
-In cells that overexpress the Gam protein, RecB is expected to be unable to bind DNA. Even though Gam overexpression prevents the apparition of long-lived RecB spots under exposure to ciprofloxacin, short-lived RecB spots remain present (Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). To understand how RecB spots can be formed in the absence of DNA binding, we simulated the expected displacements of a RecBCD-Halo-Gam complex according to the distribution of single displacements for a random 2D walk:
+In cells that overexpress the Gam protein, RecB is expected to be unable to bind DNA. Even though Gam overexpression prevents the apparition of long-lived RecB spots under exposure to ciprofloxacin, short-lived RecB spots remain present (Figure \ref{Fig:lifetimes}C, Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_vs_WT} and Table \ref{tab:fit_results}). To understand how RecB spots can be formed in the absence of DNA binding, we simulated the expected displacements of a RecBCD-Halo-Gam complex according to the distribution of single displacements for a random 2D walk:
 \begin{equation}
     P(r) = \dfrac{r}{2D_i t}e^{-\dfrac{r^2}{4D_i t}}
 \end{equation}
