Adjusted mutants BF Fig size

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -100,8 +100,6 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 \label{SIFig:analysis_workflow}
 \end{suppfigure*}
 
-%\clearpage
-
 % Object classification workflow
 \begin{suppfigure*}[htbp]
     \begin{center}
@@ -177,7 +175,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 % BF images of mutants at 0 and 30 ng/ml ciprofloxacin
 \begin{suppfigure*}[htbp]
     \begin{center}
-    \includegraphics[width=\linewidth]{SI_Figures/Mutant_BF.pdf}
+    \includegraphics[width=.8\linewidth]{SI_Figures/Mutant_BF.pdf}
     \end{center}
     \caption{Representative defocussed brightfield images of wild-type (WT), \dreca\ and \geneteneighty\ mutants cells, in the absence and presence of ciprofloxacin (30 ng/ml).}
     \label{SIFig:mutants_bf}
